--- a/card.html
+++ b/card.html
@@ -13,7 +13,7 @@
 		<img src="camel.png" alt="The-Camel">
 		<div class="border-information">
 			<!-- your favorite animal's interesting fact goes here -->
-			<p class="i">Camels can reach 7 feet in height (at the hump) and weigh up to 1500 pounds. They are specially adapted to the life in desert. Their eyes have three eyelids and two rows of eyelashes that prevent sand to enter their eyes.</p>
+			<p class="italic">Camels can reach 7 feet in height (at the hump) and weigh up to 1500 pounds. They are specially adapted to the life in desert. Their eyes have three eyelids and two rows of eyelashes that prevent sand to enter their eyes.</p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
 				<li><span>Scientific Name</span>: Camelus</li>
